<resources>
    <string name="app_name">SOUL</string>
    <string name="str_txt_not_have_account"><font color='#434C62'>You dont have an account??</font> <font color='#fc6103'>Register here</font></string>
    <string name="str_txt_agree_term_and_condition"><font color='#434C62'>Do you agree with our</font> <font color='#fc6103'>terms and condition</font></string>
    <string name="str_txt_already_member"><font color='#434C62'>I am already member</font> <font color='#fc6103'>Sign in</font></string>
    <string name="str_txt_do_not_receive_email"><font color='#434C62'>Didn’t receive the email? Check your spam filter or</font> <font color='#fc6103'>try another email address</font></string>


    //hint txt
    <string name="email_hint"><font size="14">Input your email here</font></string>
    <string name="password_hint"><font size="14">Input your password here</font></string>
    <string name="nickname_hint"><font size="14">Input your nickname here</font></string>
    <string name="str_txt_search_hint"><font size="14">Artists,Videos,News and SOLOs</font></string>

    <string name="str_txt_makingTheWorld">Making The World a better place.</string>
    <string name="str_txt_soul_to_you">© 2022 SOUL TO YOU, Inc. All rights reserved.</string>
    <string name="str_txt_login">Login</string>
    <string name="str_txt_pls_login">Please login to continue using this application</string>
    <string name="str_txt_email_hint">Input your email here</string>
    <string name="str_txt_password_hint">Input your password here</string>
    <string name="str_txt_sign_up_with_gmail">Signup with Gmail</string>
    <string name="str_txt_sign_up_facebook">Signup with Facebook</string>
    <string name="str_txt_email">Email</string>
    <string name="str_txt_password">Password</string>
    <string name="str_txt_forgot_password">Forgot Password?</string>
    <string name="str_txt_retype_password">Retype Password</string>
    <string name="str_txt_sign_up">Sign up</string>
    <string name="str_txt_congratulation">Congratulation</string>
    <string name="str_txt_complete_registration">You Successfully completed your registration\nprocess, login with your account</string>
    <string name="str_txt_create_free_account">Create Your\nFree Account</string>
    <string name="str_txt_go_back_to_login">Go Back To Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_account">Profile</string>
    <string name="str_artist">Artists</string>
    <string name="str_news">News</string>
    <string name="str_video">Video</string>
    <string name="str_home">Home</string>
    <string name="str_txt_myprofile">My Profile</string>
    <string name="str_txt_skip"><![CDATA[Skip >>]]></string>
    <string name="str_btn_let_rock">Let\'s Rock</string>
    <string name="str_txt_nickname">Nickname</string>
    <string name="str_txt_mobile_number">Mobile Number</string>
    <string name="str_txt_subscriber">Subscribers</string>
    <string name="str_txt_solo_artist">Solo Artists</string>
    <string name="str_txt_solo_kpop_star">Solo Kpop Stars</string>
    <string name="str_txt_news">News</string>
    <string name="str_txt_top_video">Top Videos</string>
    <string name="str_txt_video">Videos</string>
    <string name="str_txt_profile">Profile</string>

    <string name="str_txt_favourite">My Favourites</string>
    <string name="str_txt_artist">Artists</string>
    <string name="str_txt_boy_group">Boy Groups</string>
    <string name="str_txt_viewMore">View more</string>
    <string name="str_txt_girl_group">Girl Groups</string>
    <string name="str_txt_solo">SOLO Artists</string>
    <string name="str_txt_all_girl_group">All Girl Groups</string>
    <string name="str_txt_all_boy_group">All Boy Groups</string>
    <string name="str_txt_sort_by">Sort By</string>
    <string name="str_txt_news_detail">New Details</string>
    <string name="str_txt_comment">Comments</string>
    <string name="str_txt_relatedNews">Related News</string>
    <string name="str_txt_video_detail">Video Details</string>
    <string name="str_txt_related_videos">Related Videos</string>
    <string name="str_txt_editProfile">Edit Profile</string>
    <string name="str_txt_done">Done</string>
    <string name="str_txt_nickName">Nickname</string>
    <string name="str_txt_mobileno">Mobile Number</string>
    <string name="str_txt_language">Languages</string>
    <string name="str_txt_changePassword">Change Password</string>
    <string name="str_txt_clearCache">Clear Cache</string>
    <string name="str_txt_setting">Settings</string>
    <string name="str_txt_myFavourite">My Favourite</string>
    <string name="str_txt_rateUs">Rate Us</string>
    <string name="str_txt_about">About</string>
    <string name="str_txt_solo_artist_about">Kim Taeyeon (born March 9, 1989), known simply as Taeyeon is a South Korean singer. She is the leader and main vocalist of the girl group Girls\' Generation.. She is the leader and main vocalist of the girl group Girls\' Generation.</string>
    <string name="str_txt_bio">Bio</string>
    <string name="str_txt_stageName">Stage Name :</string>
    <string name="str_txt_birthName">Birth Name :</string>
    <string name="str_txt_koreaName">Korea Name :</string>
    <string name="str_txt_birthday">Birthday :</string>
    <string name="str_txt_zondic">Zondic :</string>
    <string name="str_txt_height">Height :</string>
    <string name="str_txt_weight">Weight :</string>
    <string name="str_txt_bloodType">Blood Type :</string>
    <string name="str_txt_mbti">MBTI :</string>
    <string name="str_txt_soloImage">Solo Images</string>
    <string name="str_txt_current_member">Current Members</string>
    <string name="str_txt_former_member">Former Members</string>
    <string name="str_txt_member">Members</string>
    <string name="str_txt_abouts">Abouts</string>
    <string name="str_txt_groupImage">Group Images</string>
    <string name="str_txt_group_artist_about">BTS has taken home two awards at the 2022 iHeartRadio Music Awards, BTS won Best Music Video with “Butter” as well as Best Fan Army. BTS x Nike possible collaboration, BTS Variety Show Run BTS Hiatus and possible return date, BTS Jin Health Update and Military service, Suga Instagram cat,BTS has taken home two awards at the 2022 iHeartRadio Music Awards, BTS won Best Music Video with “Butter” as well as Best Fan Army. BTS x Nike possible collaboration, BTS Variety Show Run BTS Hiatus and possible return date</string>
    <string name="str_txt_group_artists">Group Artists</string>
    <string name="str_txt_go_back_login">Go back to Login</string>
    <string name="str_txt_forgot_content">Enter your email and we we’ll sent you instructions on how to rest your password</string>
    <string name="str_txt_enter_email">Enter your email here</string>
    <string name="str_btn_sendInstruction">Send Instructions</string>
    <string name="str_txt_check_mail">Check your email</string>
    <string name="str_txt_skip_confirm_later">Skip, I will confirm later</string>
    <string name="str_btn_open_mail">Open email app</string>
    <string name="str_txt_enter_email_address">Enter your email address</string>
    <string name="str_txt_check_mail_content">We have sent a password recover instructions to your email</string>
    <string name="str_txt_create_new_password">Create new password</string>
    <string name="str_txt_create_new_pass_content">Your new password must be different from previous used passwords</string>
    <string name="str_txt_password_at_least">Must be at least 8 characters</string>
    <string name="str_txt_confirmPassword">Confirm Password</string>
    <string name="str_txt_password_must_match">Both password must match</string>
    <string name="str_btn_reset_password">Reset Password</string>
    <string name="str_txt_successful">Successful!</string>
    <string name="str_txt_search">Search</string>
    <string name="str_solo">Solo</string>
    <string name="str_txt_viewDetails">View Details</string>
    <string name="str_txt_saveFavourite">Save to Favourites</string>
    <string name="str_txt_fan_quiz">FAN QUIZZES</string>
    <string name="str_txt_quick_content">Now prove to your friends that you are a real KPOP FAN</string>
    <string name="str_txt_yourScore">Your scores:</string>
    <string name="str_btn_answer">Answer</string>
    <string name="str_btn_start_quiz">START QUIZZE</string>
    <string name="str_txt_name">Name</string>
    <string name="str_txt_rank">Rank</string>
    <string name="str_txt_score">Scores</string>
    <string name="str_txt_i_give_up"><u>I give up!</u></string>
    <string name="str_txt_hint_comment"><font size="14">Add a comment</font></string>
    <string name="str_txt_answer_right">Your answer is right !</string>
    <string name="str_txt_points">Points</string>
    <string name="str_txt_totalScore">Total Score:</string>
    <string name="str_btn_next_quiz">NEXT QUIZZES</string>
    <string name="str_btn_exit_quiz">EXIT QUIZZE</string>
    <string name="str_txt_wrong_status">Oops! wrong answer</string>
    <string name="str_txt_give_up_status">Oops! I give up this quizze</string>
    <string name="str_txt_time_up_status">Oops! The selection time is up.</string>
    <string name="str_txt_1st">1ST</string>
    <string name="str_txt_2nd">2nd</string>
    <string name="str_txt_3rd">3rd</string>
    <string name="str_txt_exit_content">! If you exit for this time,your entire scores will be reset</string>
    <string name="str_txt_r_you_sure">Are you sure?</string>
    <string name="str_btn_exit">EXIT</string>
    <string name="str_btn_no">NO</string>
    <string name="str_txt_scoreboard">Scoreboard</string>
    <string name="str_txt_tryAgain">TRY AGAIN</string>
    <string name="str_txt_title_final_score">FINAL SCORE</string>
    <string name="str_txt_images">Images</string>
    <string name="str_txt_selecton_time_start_soon">Selection Time will start counting soon</string>


</resources>