<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/str_home"
        android:icon="@drawable/ic_home_combined_shape"
        />

    <item
        android:id="@+id/navigation_video"
        android:title="@string/str_video"
        android:icon="@drawable/ic_combine_shape_video"
        />

    <item
        android:id="@+id/navigation_news"
        android:title="@string/str_news"
        android:icon="@drawable/ic__combine_shape_news"
        />

    <item
        android:id="@+id/navigation_artist"
        android:title="@string/str_artist"
        android:icon="@drawable/ic_smile_combile_shape"
        />
    <item
        android:id="@+id/navigation_account"
        android:title="@string/str_account"
        android:icon="@drawable/ic_profile_combined_shape"
        />

</menu>