<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    tools:context=".activities.CreateNewPasswordActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_left_arrow"
            android:textSize="20sp"
            app:tint="@color/text_color"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_group_artist_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:text="@string/str_txt_go_back_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_create_new_password"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_create_new_pass_content"
        android:textColor="@color/color_gray_light"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/str_txt_password"
        android:textColor="@color/color_black"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tl_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/str_txt_password_hint"
        android:textColor="@color/color_gray_light"
        android:textColorHint="@color/color_gray_light"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_black"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:hint="@string/password_hint"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_light"
            android:background="@drawable/bg_rounded_corner_gray"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_atLeast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/str_txt_password_at_least"
        android:textColor="@color/color_gray_light"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tl_email" />


    <TextView
        android:id="@+id/tv_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/str_txt_confirmPassword"
        android:textColor="@color/color_black"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tl_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/str_txt_password_hint"
        android:textColor="@color/color_gray_light"
        android:textColorHint="@color/color_gray_light"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmPassword"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_black"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:hint="@string/password_hint"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_light"
            android:background="@drawable/bg_rounded_corner_gray"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_mustMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/str_txt_password_must_match"
        android:textColor="@color/color_gray_light"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tl_email" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/str_btn_reset_password"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />


</LinearLayout>