<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large"
    tools:context=".activities.CheckEmailActivity">

    <TextView
        android:id="@+id/tv_checkMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_check_mail"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_checkMailContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_check_mail_content"
        android:textColor="@color/color_gray_light"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkMail"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_checkMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkMailContent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_openMail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/str_btn_open_mail"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkMail" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_skip_confirm_later"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_openMail"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_notReceiveEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_do_not_receive_email"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/margin_medium_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>