<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:padding="@dimen/margin_large"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activities.SignUpSuccessActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:src="@drawable/ic_sign_up_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_congrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:gravity="center"
            android:text="@string/str_txt_congratulation"
            android:textColor="@color/text_color"

            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_txt_complete_registration"
            android:textColor="@color/color_gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_congrat" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_back_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/str_txt_go_back_to_login"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:layout_marginTop="@dimen/margin_xxlarge"
        />


</LinearLayout>