<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large"
        >
        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_exit_title"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_status_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_txt_r_you_sure"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_title"
            />

        <TextView
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@string/str_txt_exit_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/color_view_more"
            android:paddingLeft="@dimen/margin_medium_2"
            android:paddingRight="@dimen/margin_medium_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_result">

        </TextView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginTop="@dimen/margin_xxlarge"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/str_btn_no"
                android:textColor="@color/color_gray_dark"
                android:textStyle="bold"
                app:cornerRadius="12dp"
                app:strokeWidth="1sp"
                app:strokeColor="@color/color_gray"
                android:layout_marginRight="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF614E"
                android:padding="16dp"
                android:text="@string/str_btn_exit"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_small"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>